--- a/.env.example
+++ b/.env.example
@@ -26,10 +26,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=465
-MAIL_USERNAME=collynesjumah@gmail.com
-MAIL_PASSWORD=jumah@gmail
+MAIL_USERNAME=######
+MAIL_PASSWORD=#####
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=collynesjumah@gmail.com
+MAIL_FROM_ADDRESS=#####
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
